@@ -1,3 +1,7 @@
+2012-02-08  Roland Levillain  <roland@lrde.epita.fr>
+
+	* mln/data/stretch.hh: Do not name unused arguments.
+
 2011-10-06  Roland Levillain  <roland@lrde.epita.fr>
 
 	* tests/util/line_graph.cc: Wrap long lines.
